// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AffiliateBaseSettingsFormProps /> renders correctly  by default 1`] = `
<DocumentFragment>
  <form
    class="ant-form ant-form-horizontal ant-form-large settingsForm"
  >
    <h3
      class="formSectionHeader"
    >
      Affiliate Settings
    </h3>
    <fieldset>
      <div
        class="ant-row ant-form-item"
        role="row"
      >
        <div
          class="ant-col ant-col-6 ant-form-item-label"
          role="cell"
        >
          <label
            class=""
            for="enabled"
            title="Enabled"
          >
            Enabled
          </label>
        </div>
        <div
          class="ant-col ant-col-16 ant-form-item-control"
          role="cell"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <button
                aria-checked="true"
                class="ant-switch enabledCheck ant-switch-checked"
                data-testid="affiliate-enabled"
                id="enabled"
                role="switch"
                type="button"
              >
                <div
                  class="ant-switch-handle"
                />
                <span
                  class="ant-switch-inner"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
        role="row"
      >
        <div
          class="ant-col ant-col-6 ant-form-item-label"
          role="cell"
        >
          <label
            class="ant-form-item-required"
            for="affiliateId"
            title="Affiliate id"
          >
            Affiliate id
          </label>
        </div>
        <div
          class="ant-col ant-col-16 ant-form-item-control"
          role="cell"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <input
                class="ant-input ant-input-disabled ant-input-lg"
                data-testid="affiliate-id"
                disabled=""
                id="affiliateId"
                type="text"
                value="1337"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
        role="row"
      >
        <div
          class="ant-col ant-col-6 ant-form-item-label"
          role="cell"
        >
          <label
            class="ant-form-item-required"
            for="affiliateName"
            title="Affiliate name"
          >
            Affiliate name
          </label>
        </div>
        <div
          class="ant-col ant-col-16 ant-form-item-control"
          role="cell"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <input
                class="ant-input ant-input-lg"
                data-testid="affiliate-name"
                id="affiliateName"
                type="text"
                value="I am Batman"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
        data-testid="affiliate-brands"
        role="row"
      >
        <div
          class="ant-col ant-col-6 ant-form-item-label"
          role="cell"
        >
          <label
            class="ant-form-item-required"
            for="brands"
            title="Brand"
          >
            Brand
          </label>
        </div>
        <div
          class="ant-col ant-col-16 ant-form-item-control"
          role="cell"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-select ant-select-lg ant-select-in-form-item ant-select-multiple ant-select-show-search"
                data-testid="affiliate-brand-select"
              >
                <div
                  class="ant-select-selector"
                >
                  <div
                    class="ant-select-selection-overflow"
                  >
                    <div
                      class="ant-select-selection-overflow-item"
                      style="opacity: 1;"
                    >
                      <span
                        class="ant-select-selection-item"
                        title="Gutro"
                      >
                        <span
                          class="ant-select-selection-item-content"
                        >
                          Gutro
                        </span>
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-item-remove"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="close"
                            class="anticon anticon-close"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="close"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-select-selection-overflow-item"
                      style="opacity: 1;"
                    >
                      <span
                        class="ant-select-selection-item"
                        title="GoGoCasino"
                      >
                        <span
                          class="ant-select-selection-item-content"
                        >
                          GoGoCasino
                        </span>
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-item-remove"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="close"
                            class="anticon anticon-close"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="close"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                      style="opacity: 1;"
                    >
                      <div
                        class="ant-select-selection-search"
                        style="width: 0px;"
                      >
                        <input
                          aria-activedescendant="brands_list_0"
                          aria-autocomplete="list"
                          aria-controls="brands_list"
                          aria-haspopup="listbox"
                          aria-owns="brands_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="brands"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-search-mirror"
                        >
                           
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <div
      class="ant-row dateElemRow"
      role="row"
      style="margin-left: -4px; margin-right: -4px;"
    >
      <div
        class="ant-col ant-col-12"
        role="cell"
        style="padding-left: 4px; padding-right: 4px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-large"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                Created
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <p>
              2021-11-30 10:10:17
            </p>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-12"
        role="cell"
        style="padding-left: 4px; padding-right: 4px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-large"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                Updated
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <p>
              2022-05-02 07:42:56
            </p>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`<AffiliateBaseSettingsFormProps /> renders correctly  when it's not saved 1`] = `
<DocumentFragment>
  <form
    class="ant-form ant-form-horizontal ant-form-large settingsForm"
  >
    <h3
      class="formSectionHeader"
    >
      Affiliate Settings
    </h3>
    <fieldset>
      <div
        class="ant-row ant-form-item"
        role="row"
      >
        <div
          class="ant-col ant-col-6 ant-form-item-label"
          role="cell"
        >
          <label
            class=""
            for="enabled"
            title="Enabled"
          >
            Enabled
          </label>
        </div>
        <div
          class="ant-col ant-col-16 ant-form-item-control"
          role="cell"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <button
                aria-checked="false"
                class="ant-switch enabledCheck"
                data-testid="affiliate-enabled"
                id="enabled"
                role="switch"
                type="button"
              >
                <div
                  class="ant-switch-handle"
                />
                <span
                  class="ant-switch-inner"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
        role="row"
      >
        <div
          class="ant-col ant-col-6 ant-form-item-label"
          role="cell"
        >
          <label
            class="ant-form-item-required"
            for="affiliateId"
            title="Affiliate id"
          >
            Affiliate id
          </label>
        </div>
        <div
          class="ant-col ant-col-16 ant-form-item-control"
          role="cell"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <input
                class="ant-input ant-input-lg"
                data-testid="affiliate-id"
                id="affiliateId"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
        role="row"
      >
        <div
          class="ant-col ant-col-6 ant-form-item-label"
          role="cell"
        >
          <label
            class="ant-form-item-required"
            for="affiliateName"
            title="Affiliate name"
          >
            Affiliate name
          </label>
        </div>
        <div
          class="ant-col ant-col-16 ant-form-item-control"
          role="cell"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <input
                class="ant-input ant-input-lg"
                data-testid="affiliate-name"
                id="affiliateName"
                type="text"
                value="I am Batman"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
        data-testid="affiliate-brands"
        role="row"
      >
        <div
          class="ant-col ant-col-6 ant-form-item-label"
          role="cell"
        >
          <label
            class="ant-form-item-required"
            for="brands"
            title="Brand"
          >
            Brand
          </label>
        </div>
        <div
          class="ant-col ant-col-16 ant-form-item-control"
          role="cell"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-select ant-select-lg ant-select-in-form-item ant-select-multiple ant-select-show-search"
                data-testid="affiliate-brand-select"
              >
                <div
                  class="ant-select-selector"
                >
                  <div
                    class="ant-select-selection-overflow"
                  >
                    <div
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                      style="opacity: 1;"
                    >
                      <div
                        class="ant-select-selection-search"
                        style="width: 0px;"
                      >
                        <input
                          aria-activedescendant="brands_list_0"
                          aria-autocomplete="list"
                          aria-controls="brands_list"
                          aria-haspopup="listbox"
                          aria-owns="brands_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="brands"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-search-mirror"
                        >
                           
                        </span>
                      </div>
                    </div>
                  </div>
                  <span
                    class="ant-select-selection-placeholder"
                  >
                    Select brands
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <div
      class="ant-row dateElemRow"
      role="row"
      style="margin-left: -4px; margin-right: -4px;"
    />
  </form>
</DocumentFragment>
`;

exports[`<AffiliateBaseSettingsFormProps /> renders correctly  when saved but not edited 1`] = `
<DocumentFragment>
  <form
    class="ant-form ant-form-horizontal ant-form-large settingsForm"
  >
    <h3
      class="formSectionHeader"
    >
      Affiliate Settings
    </h3>
    <fieldset>
      <div
        class="ant-row ant-form-item"
        role="row"
      >
        <div
          class="ant-col ant-col-6 ant-form-item-label"
          role="cell"
        >
          <label
            class=""
            for="enabled"
            title="Enabled"
          >
            Enabled
          </label>
        </div>
        <div
          class="ant-col ant-col-16 ant-form-item-control"
          role="cell"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <button
                aria-checked="true"
                class="ant-switch enabledCheck ant-switch-checked"
                data-testid="affiliate-enabled"
                id="enabled"
                role="switch"
                type="button"
              >
                <div
                  class="ant-switch-handle"
                />
                <span
                  class="ant-switch-inner"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
        role="row"
      >
        <div
          class="ant-col ant-col-6 ant-form-item-label"
          role="cell"
        >
          <label
            class="ant-form-item-required"
            for="affiliateId"
            title="Affiliate id"
          >
            Affiliate id
          </label>
        </div>
        <div
          class="ant-col ant-col-16 ant-form-item-control"
          role="cell"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <input
                class="ant-input ant-input-disabled ant-input-lg"
                data-testid="affiliate-id"
                disabled=""
                id="affiliateId"
                type="text"
                value="1337"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
        role="row"
      >
        <div
          class="ant-col ant-col-6 ant-form-item-label"
          role="cell"
        >
          <label
            class="ant-form-item-required"
            for="affiliateName"
            title="Affiliate name"
          >
            Affiliate name
          </label>
        </div>
        <div
          class="ant-col ant-col-16 ant-form-item-control"
          role="cell"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <input
                class="ant-input ant-input-lg"
                data-testid="affiliate-name"
                id="affiliateName"
                type="text"
                value="I am Batman"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
        data-testid="affiliate-brands"
        role="row"
      >
        <div
          class="ant-col ant-col-6 ant-form-item-label"
          role="cell"
        >
          <label
            class="ant-form-item-required"
            for="brands"
            title="Brand"
          >
            Brand
          </label>
        </div>
        <div
          class="ant-col ant-col-16 ant-form-item-control"
          role="cell"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-select ant-select-lg ant-select-in-form-item ant-select-multiple ant-select-show-search"
                data-testid="affiliate-brand-select"
              >
                <div
                  class="ant-select-selector"
                >
                  <div
                    class="ant-select-selection-overflow"
                  >
                    <div
                      class="ant-select-selection-overflow-item"
                      style="opacity: 1;"
                    >
                      <span
                        class="ant-select-selection-item"
                        title="Gutro"
                      >
                        <span
                          class="ant-select-selection-item-content"
                        >
                          Gutro
                        </span>
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-item-remove"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="close"
                            class="anticon anticon-close"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="close"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-select-selection-overflow-item"
                      style="opacity: 1;"
                    >
                      <span
                        class="ant-select-selection-item"
                        title="GoGoCasino"
                      >
                        <span
                          class="ant-select-selection-item-content"
                        >
                          GoGoCasino
                        </span>
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-item-remove"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="close"
                            class="anticon anticon-close"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="close"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                      style="opacity: 1;"
                    >
                      <div
                        class="ant-select-selection-search"
                        style="width: 0px;"
                      >
                        <input
                          aria-activedescendant="brands_list_0"
                          aria-autocomplete="list"
                          aria-controls="brands_list"
                          aria-haspopup="listbox"
                          aria-owns="brands_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="brands"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-search-mirror"
                        >
                           
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <div
      class="ant-row dateElemRow"
      role="row"
      style="margin-left: -4px; margin-right: -4px;"
    >
      <div
        class="ant-col ant-col-12"
        role="cell"
        style="padding-left: 4px; padding-right: 4px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-large"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                Created
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <p>
              2021-11-30 10:10:17
            </p>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`<AffiliateBaseSettingsFormProps /> renders correctly  without any edit rights 1`] = `
<DocumentFragment>
  <form
    class="ant-form ant-form-horizontal ant-form-large settingsForm"
  >
    <h3
      class="formSectionHeader"
    >
      Affiliate Settings
    </h3>
    <fieldset>
      <div
        class="ant-row ant-form-item"
        role="row"
      >
        <div
          class="ant-col ant-col-6 ant-form-item-label"
          role="cell"
        >
          <label
            class=""
            for="enabled"
            title="Enabled"
          >
            Enabled
          </label>
        </div>
        <div
          class="ant-col ant-col-16 ant-form-item-control"
          role="cell"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <button
                aria-checked="true"
                class="ant-switch enabledCheck ant-switch-checked ant-switch-disabled"
                data-testid="affiliate-enabled"
                disabled=""
                id="enabled"
                role="switch"
                type="button"
              >
                <div
                  class="ant-switch-handle"
                />
                <span
                  class="ant-switch-inner"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
        role="row"
      >
        <div
          class="ant-col ant-col-6 ant-form-item-label"
          role="cell"
        >
          <label
            class="ant-form-item-required"
            for="affiliateId"
            title="Affiliate id"
          >
            Affiliate id
          </label>
        </div>
        <div
          class="ant-col ant-col-16 ant-form-item-control"
          role="cell"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <input
                class="ant-input ant-input-disabled ant-input-lg"
                data-testid="affiliate-id"
                disabled=""
                id="affiliateId"
                type="text"
                value="1337"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
        role="row"
      >
        <div
          class="ant-col ant-col-6 ant-form-item-label"
          role="cell"
        >
          <label
            class="ant-form-item-required"
            for="affiliateName"
            title="Affiliate name"
          >
            Affiliate name
          </label>
        </div>
        <div
          class="ant-col ant-col-16 ant-form-item-control"
          role="cell"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <input
                class="ant-input ant-input-disabled ant-input-lg"
                data-testid="affiliate-name"
                disabled=""
                id="affiliateName"
                type="text"
                value="I am Batman"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
        data-testid="affiliate-brands"
        role="row"
      >
        <div
          class="ant-col ant-col-6 ant-form-item-label"
          role="cell"
        >
          <label
            class="ant-form-item-required"
            for="brands"
            title="Brand"
          >
            Brand
          </label>
        </div>
        <div
          class="ant-col ant-col-16 ant-form-item-control"
          role="cell"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-select ant-select-lg ant-select-in-form-item ant-select-multiple ant-select-disabled ant-select-show-search"
                data-testid="affiliate-brand-select"
              >
                <div
                  class="ant-select-selector"
                >
                  <div
                    class="ant-select-selection-overflow"
                  >
                    <div
                      class="ant-select-selection-overflow-item"
                      style="opacity: 1;"
                    >
                      <span
                        class="ant-select-selection-item"
                        title="Gutro"
                      >
                        <span
                          class="ant-select-selection-item-content"
                        >
                          Gutro
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-select-selection-overflow-item"
                      style="opacity: 1;"
                    >
                      <span
                        class="ant-select-selection-item"
                        title="GoGoCasino"
                      >
                        <span
                          class="ant-select-selection-item-content"
                        >
                          GoGoCasino
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                      style="opacity: 1;"
                    >
                      <div
                        class="ant-select-selection-search"
                        style="width: 0px;"
                      >
                        <input
                          aria-activedescendant="brands_list_0"
                          aria-autocomplete="list"
                          aria-controls="brands_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="brands_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          disabled=""
                          id="brands"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-search-mirror"
                        >
                           
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <div
      class="ant-row dateElemRow"
      role="row"
      style="margin-left: -4px; margin-right: -4px;"
    >
      <div
        class="ant-col ant-col-12"
        role="cell"
        style="padding-left: 4px; padding-right: 4px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-large"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                Created
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <p>
              2021-11-30 10:10:17
            </p>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-12"
        role="cell"
        style="padding-left: 4px; padding-right: 4px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-large"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                Updated
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <p>
              2022-05-02 07:42:56
            </p>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
